# Stepik

./: .gitignore  CMakeLists.txt  README.md
algorithm/: 2-4.py  4-1-1.py  4-1-2.py  4-1-3.py  4-2-1.py  4-2-2.py  4-3-3.py  6-1.py  6-4.py  6-5.py  6-8.py  8-2-1.py  8-2.py  8-3-levenshtein.cpp  8-4-backpack.cpp  8-7-1-stairstep.cpp  8-7-2-calc.cpp
algorithm2/: 1-2-1-brackets.cpp  1-2-2-treeheight.cpp  1-2-3-packets.cpp  1-2-4-maxstack.cpp  1-2-5-sliding-window.cpp  2-3-1-heap.cpp
cpp-7/: 10-1-from_string_exception.cpp  11-1-1-map_reduce.cpp  11-1-2-map_reduce.cpp  11-3-1-apply.cpp  11-3-2-Dimension.cpp  2-3-rotate.cpp  2-4-strstr.cpp  2-6-resize.cpp  5-2-substring.cpp  5-3-SharedPtr.cpp  6-1-ArrayT.cpp  6-1-ValueHolder.cpp  7(1)-integrate.cpp  9-2-sequence_len.cpp  9-3-multimethod.cpp  9-4-VectorList.cpp  sketches.cpp
multithreads/2.1/: main.cpp
multithreads/2.2/: alloc.cpp  smart.cpp
multithreads/3.2/: Makefile  bot.cpp  client.cpp  common.h  server.cpp
multithreads/5.2/: child.cpp  unkillablw.cpp
multithreads/5.4/: shell.cpp
multithreads/5.4.1/: Makefile
multithreads/5.4.2/: Makefile  fifo.cpp
multithreads/5.4.3/: work.cpp
multithreads/6.2.1/: SysVmsg.cpp
multithreads/6.2.2/: PosixMsg.cpp
multithreads/6.3.1/: sem.cpp
multithreads/6.3.2/: psem.cpp
multithreads/6.4.1/: memV.cpp
multithreads/6.4.2/: memP.cpp
multithreads/7.1/: main.cpp
multithreads/7.2/: main.cpp
multithreads/7.3/: main.cpp
multithreads/8.3/: main.cpp
multithreads/9.1/: CMakeLists.txt  main.cpp
